Encryption: Updated, now uses Crypto
Edit.ejs: Moved scripts and css to seperate files.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Beta - the ~~Beta~~ Best IDE",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "replpersist": "^1.0.7",
