--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Beta - the ~~Beta~~ Best IDE",
   "main": "index.js",
   "dependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "htmlhint": "^0.14.2",
     "replpersist": "^1.0.7",
     "socket.io": "^3.0.3"
   },
